--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -28,20 +28,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/05/29 14:07:59 WARN SparkContext: Another SparkContext is being constructed (or threw an exception in its constructor). This may indicate an error, since only one SparkContext should be running in this JVM (see SPARK-2243). The other SparkContext was created at:\n",
-      "org.apache.spark.api.java.JavaSparkContext.<init>(JavaSparkContext.scala:58)\n",
-      "java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
-      "java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:490)\n",
-      "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:247)\n",
-      "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "py4j.Gateway.invoke(Gateway.java:238)\n",
-      "py4j.commands.ConstructorCommand.invokeConstructor(ConstructorCommand.java:80)\n",
-      "py4j.commands.ConstructorCommand.execute(ConstructorCommand.java:69)\n",
-      "py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "java.base/java.lang.Thread.run(Thread.java:829)\n"
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/06/01 11:05:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -79,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
@@ -91,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -172,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -216,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -255,7 +244,7 @@
       "+----+---------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 0.18397068977355957 seconds ---\n"
+      "Query runtime (uncached): 0.1838 seconds\n"
      ]
     }
    ],
@@ -274,12 +263,12 @@
     "ORDER BY view\n",
     "\"\"\").show()\n",
     "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "print(f\"Query runtime (uncached): {time.time() - start_time:.4f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -289,24 +278,23 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DataFrame[]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is 'home_sales' cached? True\n"
+     ]
     }
    ],
    "source": [
     "# 7. Cache the the temporary table home_sales.\n",
-    "spark.sql(\"CACHE TABLE home_sales\")"
+    "spark.sql(\"CACHE TABLE home_sales\")\n",
+    "\n",
+    "print(\"Is 'home_sales' cached?\", spark.catalog.isCached(\"home_sales\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -321,7 +309,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -372,7 +360,7 @@
       "+----+---------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 0.1313319206237793 seconds (cached) ---\n"
+      "Query runtime (cached): 0.1197 seconds\n"
      ]
     }
    ],
@@ -392,12 +380,12 @@
     "ORDER BY view\n",
     "\"\"\").show()\n",
     "\n",
-    "print(\"--- %s seconds (cached) ---\" % (time.time() - start_time))\n"
+    "print(f\"Query runtime (cached): {time.time() - start_time:.4f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "id": "Qm12WN9isHBR"
    },
@@ -417,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "id": "AZ7BgY61sRqY"
    },
@@ -429,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "id": "J6MJkHfvVcvh"
    },
@@ -441,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -480,7 +468,7 @@
       "+----+---------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 0.30770373344421387 seconds (parquet) ---\n"
+      "--- 0.3188450336456299 seconds (parquet) ---\n"
      ]
     }
    ],
@@ -505,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -515,24 +503,23 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DataFrame[]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is 'home_sales' cached after uncache? False\n"
+     ]
     }
    ],
    "source": [
     "# 14. Uncache the home_sales temporary table.\n",
-    "spark.sql(\"UNCACHE TABLE home_sales\")"
+    "spark.sql(\"UNCACHE TABLE home_sales\")\n",
+    "\n",
+    "print(\"Is 'home_sales' cached after uncache?\", spark.catalog.isCached(\"home_sales\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -547,7 +534,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
